--- a/src/components/css/style.css
+++ b/src/components/css/style.css
@@ -1,10 +1,13 @@
 *{
-    font-family: system-ui, 'Segoe UI', 'Open Sans', 'Helvetica Neue', sans-serif;
+    /* font-family: system-ui, 'Segoe UI', 'Open Sans', 'Helvetica Neue', sans-serif; */
+    font-family: roboto;
 }
 
 .todo-wrapper{
+    display: flex;
+    align-items: center;
     width: 100%;
-    background-color: orange;
+    background-color: rgb(91, 211, 5);
     margin: auto;
     padding: 2rem;
     border-radius: 20px;
@@ -23,22 +26,23 @@
     margin-bottom: 2rem;
     padding: 10px 10px;
     font-size: 1rem;
-    border: 0.5px solid black;
+    border: 1px solid black;
     margin: 1px;
-
     /* box-shadow: ; */
 }
 
 .todo-input {
     /* width: 300px; */
-    background-color: rgb(245, 193, 96);
+    font-size: 20px;
+    background-color: rgb(91, 211, 5);
     color: black;
 }
 
 .todo-btn {
     background-color: black;
-    color: orange;
+    color: rgb(91, 211, 5);
     font-weight: 700;
+    font-size: 20px;
     width: 7rem;
 }
 
@@ -61,7 +65,7 @@
 
 @media screen and (min-width:700px){
     .todo-wrapper{
-        max-width: 400px
+        max-width: 600px
     }
 
     .todo-input{
